# alexandria-semantic-recall

./: .gitignore  CHANGELOG.md  LICENSE  README.md  _test_incremental.py  _test_refresh.py  build_index.py  build_lance_index.py  incremental_update.py  index_lib.py  migrate_to_lance.py  pyproject.toml  rebuild.py  search_core.py  server.py
examples/corpus/: monuments_and_memory.txt  oral_history_methods.txt
